@@ -14,6 +14,7 @@ Prerequisites:
   - popt
   - curses
   - GNU make
+  - OpenSSL
 
 Tested on:
   Linux, Solaris, FreeBSD, IRIX, Cygwin
